--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,13 +4,14 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "t-games"
-version = "1.0.1"
+version = "1.0.5"
 description = "A collection of classic games playable in your terminal"
 readme = "README.md"
 requires-python = ">=3.7"
 license = {text = "MIT"}
 authors = [
-    {name = "pavansai-tanguturi", email = "pavansaitanguturi@gmail.com"}
+    {name = "PavanSai Tanguturi", email = "pavansaitanguturi@gmail.com"},
+    {name = "Siddartha Karumuri", email = "siddarthakarumuri003@gmail.com"}
 ]
 keywords = ["games", "terminal", "console", "multiplayer", "chess", "sudoku", "tictactoe", "battleship", "adventure"]
 classifiers = [
