--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "t-games"
-version = "1.0.6"
+version = "1.0.7"
 description = "A collection of classic games playable in your terminal"
 readme = "README.md"
 requires-python = ">=3.7"
@@ -13,7 +13,7 @@ authors = [
     {name = "PavanSai Tanguturi", email = "pavansaitanguturi@gmail.com"},
     {name = "Siddartha Karumuri", email = "siddarthakarumuri003@gmail.com"}
 ]
-keywords = ["games", "terminal", "console", "multiplayer", "chess", "sudoku", "tictactoe", "battleship", "adventure"]
+keywords = ["games", "terminal", "console", "multiplayer", "chess", "sudoku", "tictactoe", "adventure"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: End Users/Desktop",
